--- a/src/app/busqueda/busqueda.component.html
+++ b/src/app/busqueda/busqueda.component.html
@@ -67,6 +67,11 @@
               </label>
             </div>
           </div>
+          <div class="row" style="margin-left: 10%;margin-top: 2%">
+            <div class="col-md-10" style=";text-align: center" >
+              <button  class="btn btn-secondary" style="background-color: #2D074A" id="editBut" (click)="toEvento(evento)">Ver detalle</button>
+            </div>
+          </div>
         </ng-template>
       </div>
     </div>
