--- a/src/app/evento/evento.component.html
+++ b/src/app/evento/evento.component.html
@@ -4,7 +4,12 @@
   <div class="col-md-3">
   </div>
   <div class="col-md-6" style="background-color: lightcyan" >
-
+    <div class="row" style="margin-left: 10%;">
+      <div class="col-md-10" style=";text-align: center" >
+        <label class="input-group-label">Nombre:<br><span style="color: crimson">{{eventoData.nombre}}</span>
+        </label>
+      </div>
+    </div>
     <div class="row" style="margin-left: 10%;">
       <div class="col-md-10" style=";text-align: center" >
         <label class="input-group-label">Descripción:<br><span style="color: crimson">{{eventoData.descripcion}}</span>
